# spec_lib_template

./: .travis.yml  Cargo.toml
src/: lib.rs
tests/common/: mod.rs
tests/features/: some.feature
